--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             margin-top: 10px;
         }
         .spacer {
-            height: 300px;
+            height: 300px; /* Extra space for better scrolling */
         }
         .heading {
             color: #1e3321;
@@ -48,21 +48,20 @@
     <select id="languageSelector">
         <option value="en">🇬🇧 English</option>
         <option value="ru">🇷🇺 Русский</option>
-        <option value="ua">🇺🇦 Українська</option>
     </select>
 
     <h2 class="heading" id="title">🏠 Add Object</h2>
 
     <label for="type_of_deal" id="label-type_of_deal">Type of Deal:</label>
     <select id="type_of_deal">
-        <option value="" disabled selected id="option-select-type">Select Type</option>
+        <option value="" disabled selected>Select Type</option>
         <option value="rent" id="option-rent">Rent</option>
         <option value="sale" id="option-sale">Sale</option>
     </select>
 
     <label for="type_of_object" id="label-type_of_object">Type of Object:</label>
     <select id="type_of_object">
-        <option value="" disabled selected id="option-select-object">Select Type</option>
+        <option value="" disabled selected>Select Type</option>
         <option value="apartment" id="option-apartment">Apartment</option>
         <option value="house" id="option-house">House</option>
     </select>
@@ -80,7 +79,7 @@
 
     <label for="tax" id="taxLabel" style="display: none;">Tax:</label>
     <select id="tax">
-        <option value="" disabled selected id="option-select-tax">Select Tax</option>
+        <option value="" disabled selected>Select Tax</option>
         <option value="included" id="option-tax_included">Included</option>
         <option value="excluded" id="option-tax_excluded">Excluded</option>
     </select>
@@ -95,106 +94,88 @@
         const translations = {
             en: {
                 title: "🏠 Add Object",
-                label-type_of_deal: "Type of Deal:",
-                option-select-type: "Select Type",
-                option-rent: "Rent",
-                option-sale: "Sale",
-                label-type_of_object: "Type of Object:",
-                option-select-object: "Select Type",
-                option-apartment: "Apartment",
-                option-house: "House",
+                type_of_deal: "Type of Deal:",
+                rent: "Rent",
+                sale: "Sale",
+                type_of_object: "Type of Object:",
+                apartment: "Apartment",
+                house: "House",
                 owner_name: "Owner's name",
                 owner_phone: "Owner's phone",
                 city: "City",
                 street: "Street",
                 building: "Building",
-                apartment: "Apartment number",
+                apartment_number: "Apartment number",
                 floor: "Floor",
                 total_floors: "Number of floors",
                 area: "Area (m²)",
                 price: "Price (EURO)",
-                taxLabel: "Tax:",
-                option-select-tax: "Select Tax",
-                option-tax_included: "Included",
-                option-tax_excluded: "Excluded",
+                tax: "Tax:",
+                tax_included: "Included",
+                tax_excluded: "Excluded",
                 description: "Description",
-                submitBtn: "Submit"
+                submit: "Submit"
             },
             ru: {
                 title: "🏠 Добавить объект",
-                label-type_of_deal: "Тип сделки:",
-                option-select-type: "Выберите тип",
-                option-rent: "Аренда",
-                option-sale: "Продажа",
-                label-type_of_object: "Тип объекта:",
-                option-select-object: "Выберите тип",
-                option-apartment: "Квартира",
-                option-house: "Дом",
+                type_of_deal: "Тип сделки:",
+                rent: "Аренда",
+                sale: "Продажа",
+                type_of_object: "Тип объекта:",
+                apartment: "Квартира",
+                house: "Дом",
                 owner_name: "Имя владельца",
                 owner_phone: "Телефон владельца",
                 city: "Город",
                 street: "Улица",
                 building: "Здание",
-                apartment: "Номер квартиры",
+                apartment_number: "Номер квартиры",
                 floor: "Этаж",
                 total_floors: "Количество этажей",
                 area: "Площадь (м²)",
                 price: "Цена (EURO)",
-                taxLabel: "Налог:",
-                option-select-tax: "Выберите налог",
-                option-tax_included: "Включено",
-                option-tax_excluded: "Исключено",
+                tax: "Налог:",
+                tax_included: "Включено",
+                tax_excluded: "Исключено",
                 description: "Описание",
-                submitBtn: "Отправить"
-            },
-            ua: {
-                title: "🏠 Додати об'єкт",
-                label-type_of_deal: "Тип угоди:",
-                option-select-type: "Оберіть тип",
-                option-rent: "Оренда",
-                option-sale: "Продаж",
-                label-type_of_object: "Тип об'єкта:",
-                option-select-object: "Оберіть тип",
-                option-apartment: "Квартира",
-                option-house: "Будинок",
-                owner_name: "Ім'я власника",
-                owner_phone: "Телефон власника",
-                city: "Місто",
-                street: "Вулиця",
-                building: "Будівля",
-                apartment: "Номер квартири",
-                floor: "Поверх",
-                total_floors: "Кількість поверхів",
-                area: "Площа (м²)",
-                price: "Ціна (EURO)",
-                taxLabel: "Податок:",
-                option-select-tax: "Оберіть податок",
-                option-tax_included: "Включено",
-                option-tax_excluded: "Виключено",
-                description: "Опис",
-                submitBtn: "Надіслати"
+                submit: "Отправить"
             }
         };
 
         function setLanguage(lang) {
-            for (const key in translations[lang]) {
-                const element = document.getElementById(key);
-                if (element) {
-                    if (element.tagName === "INPUT" || element.tagName === "TEXTAREA") {
-                        element.placeholder = translations[lang][key];
-                    } else {
-                        element.textContent = translations[lang][key];
-                    }
-                }
-            }
-            document.getElementById("languageSelector").value = lang;
+            document.getElementById("title").textContent = translations[lang].title;
+            document.getElementById("label-type_of_deal").textContent = translations[lang].type_of_deal;
+            document.getElementById("option-rent").textContent = translations[lang].rent;
+            document.getElementById("option-sale").textContent = translations[lang].sale;
+            document.getElementById("label-type_of_object").textContent = translations[lang].type_of_object;
+            document.getElementById("option-apartment").textContent = translations[lang].apartment;
+            document.getElementById("option-house").textContent = translations[lang].house;
+            document.getElementById("taxLabel").textContent = translations[lang].tax;
+            document.getElementById("option-tax_included").textContent = translations[lang].tax_included;
+            document.getElementById("option-tax_excluded").textContent = translations[lang].tax_excluded;
+
+            document.getElementById("owner_name").placeholder = translations[lang].owner_name;
+            document.getElementById("owner_phone").placeholder = translations[lang].owner_phone;
+            document.getElementById("city").placeholder = translations[lang].city;
+            document.getElementById("street").placeholder = translations[lang].street;
+            document.getElementById("building").placeholder = translations[lang].building;
+            document.getElementById("apartment").placeholder = translations[lang].apartment_number;
+            document.getElementById("floor").placeholder = translations[lang].floor;
+            document.getElementById("total_floors").placeholder = translations[lang].total_floors;
+            document.getElementById("area").placeholder = translations[lang].area;
+            document.getElementById("price").placeholder = translations[lang].price;
+            document.getElementById("description").placeholder = translations[lang].description;
+            document.getElementById("submitBtn").textContent = translations[lang].submit;
         }
 
+        // Detect language from URL or default to English
         const urlParams = new URLSearchParams(window.location.search);
-        const userLang = urlParams.get("locale") || "en";
+        const userLang = urlParams.get("locale") || "en"; // Default: English
 
+        // Apply language
         setLanguage(userLang);
 
+        // Change language on dropdown select
         document.getElementById("languageSelector").addEventListener("change", function () {
             setLanguage(this.value);
         });
